--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,42 @@
-pls n<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons&display=swap" rel="stylesheet">
+    <!-- Compiled and minified CSS -->
+    <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <link rel="stylesheet" href="../public/stylesheets/style.css">
+
+    <script type="text/javascript" src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
+
   </head>
   <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+
+
+  <div class="container row">
+      <div class="col s12 m12 l12">
+          <h1 class="flow-text">Welcome to Don't share my code</h1>
+          <p class="flow-text">As a TA for CSE 115, I often find myself looking for a quick online tool where I can quickly write code and work with students</p>
+          <p class="flow-text">This website lets users create rooms where they can share their personal text editor link</p>
+          <p class="flow-text">This tool communicates with other users in the room with real time updates to their text editor</p>
+
+          <p class="flow-text">Perfect for chill classroom environments and whiteboard interviews</p>
+
+          <form action="/generateRoomURL" method="post">
+              <button class="btn waves-effect waves-light" type="submit" name="action">Submit
+          </form>
+
+      </div>
+
+  </div>
+
+
+
+
   </body>
 </html>
