--- a/views/chooseNickname.ejs
+++ b/views/chooseNickname.ejs
@@ -21,6 +21,16 @@
 </head>
 
 <body>
+
+<nav>
+  <div class="nav-wrapper" style="background-color: #B8B8FF; padding-bottom: 20px" >
+    <a href="/" class="brand-logo black-text" style="padding-left: 10px">Don't share my code</a>
+    <ul id="nav-mobile" class="right hide-on-med-and-down">
+      <li><a href="/about" class="black-text flow-text">About</a></li>
+    </ul>
+  </div>
+</nav>
+
   <div class="container">
     <!-- <div class="text"><h1>Sign In</h1></div> -->
     <div class="name">
@@ -29,7 +39,7 @@
         <form class="login-form" action='/code/<%=id%>/nickname' method="post">
           <input type="text" placeholder="username" name="nickname" />
 
-          <button class="btn btn-primary" type="submit">Submit</button>
+          <button class="btn" type="submit" style="border-radius: 20px; background-color: #9381FF;">Submit</button>
 
         </form>
       </div>
