--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,20 +15,27 @@
     <script type="text/javascript" src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
 
   </head>
-  <body>
+  <body style="background-color: white">
 
+  <nav>
+      <div class="nav-wrapper" style="background-color: #B8B8FF; padding-bottom: 20px" >
+          <a href="/" class="brand-logo black-text" style="padding-left: 10px">Don't share my code</a>
+          <ul id="nav-mobile" class="right hide-on-med-and-down">
+              <li><a href="/about" class="black-text flow-text">About</a></li>
+          </ul>
+      </div>
+  </nav>
 
   <div class="container row">
-      <div class="col s12 m12 l12">
-          <h1 class="flow-text">Welcome to Don't share my code</h1>
-          <p class="flow-text">As a TA for CSE 115, I often find myself looking for a quick online tool where I can quickly write code and work with students</p>
-          <p class="flow-text">This website lets users create rooms where they can share their personal text editor link</p>
-          <p class="flow-text">This tool communicates with other users in the room with real time updates to their text editor</p>
-
-          <p class="flow-text">Perfect for chill classroom environments and whiteboard interviews</p>
+      <div class="col s12 m12 l12 center-align" style="padding-top: 30px">
+            <img class="responsive-img" src="/images/landing_isometric.png">
+          <h1 class="">Don't share my code</h1>
+          <p class="">As a TA for CSE 115, I often find myself looking for a quick online tool where I can quickly write code and work with students</p>
+          <p class="">Create rooms where you can share your online text editor link</p>
+          <p class="">Perfect for chill classroom environments and whiteboard interviews</p>
 
           <form action="/generateRoomURL" method="post">
-              <button class="btn waves-effect waves-light" type="submit" name="action">Submit
+              <button style="border-radius: 20px; background-color: #9381FF;" class="btn waves-effect waves-light" type="submit" name="action">Let's get started</button>
           </form>
 
       </div>
