--- a/views/code.ejs
+++ b/views/code.ejs
@@ -184,7 +184,7 @@ url.innerText = window.location.href;
 
         console.log(data)
         allowed = false
-        editor.setValue(data, 1)
+        editor.setValue(data)
         allowed = true
     })
 
